src/components/common/Sidebar/styles.scss
.sidebar {
  --item-inner-x-padding: 0.85rem;
  --icon-size: 1.1rem;
  --margin-between-icon-and-title: 0.75rem;
  --padding-x: 1.25rem;

  display: flex;
  flex-direction: column;
  background-color: hsl(var(--primary-color));
  width: 17.4rem;
  padding: 1.64rem 0;
  position: sticky;
  top: 0;
  height: 100vh;
  z-index: 1;

  &__header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-inline: var(--padding-x);
  }

  &__logo {
    width: 4.5rem;
    height: 1.3rem;
  }

  &__nav-container {
    margin-top: 1.75rem;
    padding-inline: 0.75rem;
  }

  &__list-item {
    margin-bottom: 0.5rem;
    position: relative;
  }

  &__item {
    color: hsl(var(--white-color) / 40%);
    font-size: var(--p5-font-size);
    line-height: var(--p5-line-height);
    display: flex;
    align-items: center;
    font-weight: 600;
    padding: 0.61rem var(--item-inner-x-padding);
    border-radius: 5px;
    position: relative;
    width: 100%;
    cursor: pointer;

    &--active {
      background-color: hsl(var(--white-color) / 5%);
      color: hsl(var(--white-color));
    }
  }

  &__item--expanded &__chevron {
    transform: rotate(180deg);
  }

  &__nav-icon {
    width: var(--icon-size);
    height: var(--icon-size);
    margin-right: var(--margin-between-icon-and-title);
  }

  &__submenu .sidebar__item {
    padding-left: calc(
      var(--icon-size) + var(--item-inner-x-padding) + var(--margin-between-icon-and-title)
    );
  }

  &__chevron {
    width: 1.25rem;
    height: 1.25rem;
    margin-left: auto;
  }

  &__footer {
    display: flex;
    padding-inline: var(--padding-x);
    margin-top: auto;
    align-items: center;
  }

  &__user-name {
    font-size: var(--p3-font-size);
    line-height: var(--p3-line-height);
    color: hsl(var(--white-color));
  }

  &__user-photo {
    border-radius: 50%;
    width: 2.25rem;
    height: 2.25rem;
    object-fit: cover;
    margin-right: 0.75rem;
  }

  &__user-email {
    font-size: var(--p5-font-size);
    line-height: var(--p5-line-height);
    color: hsl(var(--white-color) / 50%);
  }

  &__submenu {
    display: none;
  }

  &__item--expanded ~ &__submenu {
    display: block;
  }

  &__logo-link {
    display: block;
    &--collapsed {
      display: none;
    }
  }
}

@media screen and (max-width: 1400px) {
  .sidebar {
    width: 3.75rem;
    padding-inline: 0.75rem;

    &__footer {
      padding-inline: 0;
    }

    &__user-photo {
      margin-right: 0;
    }

    &__user-email,
    &__user-name,
    &__chevron {
      display: none;
    }

    &__header {
      padding: 0;
      margin-bottom: 1.25rem;
      flex-direction: column;
      row-gap: 1rem;
    }

    &__logo-link {
      display: none;

      &--collapsed {
        display: block;
      }
    }

    &__logo {
      width: auto;
      height: auto;
    }

    &__nav-container {
      margin-top: 0;
      padding-inline: 0;
    }

    &__item-title {
      display: none;
    }

    &__submenu &__item-title {
      display: block;
    }

    &__item {
      padding: 0.6rem;
      border-radius: 0.18rem;

      &::before {
        display: none;
      }
    }

    &__item ~ &__submenu {
      display: none;
    }

    &__list-item:hover &__submenu {
      display: block;
    }

    &__submenu {
      position: absolute;
      left: 100%;
      top: 0;
      background-color: hsl(var(--primary-color));
      width: 14rem;
      padding: 0.25rem 0;
      border-radius: 0.25rem;
    }

    &__submenu &__item {
      padding: 0.6rem 1rem;
    }

    &__nav-icon {
      margin-right: 0;
    }
  }
}

